# TaskFlow

./: .dockerignore  .env.docker.example  .env.example  .env.production.example  .gitignore  .vercelignore  CHANGES.md  LICENSE  Makefile  README.md  TROUBLESHOOTING.md  db-view.sh  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  dockerfile  install.sh  nginx.conf  pyproject.toml  requirements.txt  setup_debian.sh  stress-test.py  taskflow-setup-k8s.sh  vercel.json  verify_jobs.py  verify_test.py
.github/: dependabot.yml
.github/workflows/: ci-caching.yaml  ci-cd-pipeline.yaml  ci-cd.yaml  ci.yaml  delivery.yaml  publish-docker.yml
alembic/: env.py
alembic/versions/: 0ed172807493_.py  5276c55cca0d_.py  (+10 more)
api/: Dockerfile  main.py  oauth2.py  rate_limiter.py  schemas.py  utils.py
core/: Dockerfile  README.md  config.py  database.py  models.py  queue_manager.md  queue_manager.py  redis_client.py
debian/: README.md  changelog  config.env  control  copyright  install  postinst  postrm  prerm  rules
docs/: index.html  style.css
k8s/: 02-configmaps.yaml
public/: architecture.css  architecture.html  index.html  style.css
scripts/: janitor.py  janitor_script.py  setup-production.sh  start-local-redis.sh
taskflow-cli/: LICENSE  cli.py  requirements.txt  setup.py
taskflow_cli/: MANIFEST.in  run_cli.py  setup.py
tests/: autoscale-test.py  run_temp2.py  stress-test.py  test.py  verify_autoscaling.py
worker/: Dockerfile  README.md  heartbeat.py  loader.py  main.py  task_handler.py  tasks.py  utils.py  worker.py
worker_cpp/: worker.cpp
(+24 files in other folders)
